Apparently .last-move squares are now using display:none not visibility:hidden. This may be the cause of the following bug: https://github.com/Siderite/lichessTools/issues/1635

--- a/tools/themes/pieceDrag.css
+++ b/tools/themes/pieceDrag.css
@@ -21,13 +21,13 @@ body.lichessTools.lichessTools-theme_pieceDrag piece.black.dragging {
   filter: drop-shadow(10px 5px 10px #404040);
 }
 
-body.lichessTools.lichessTools-theme_pieceDrag square.move-dest:not([style*="hidden"]):hover {
+body.lichessTools.lichessTools-theme_pieceDrag square.move-dest:not([style*="hidden"],[style*="display: none"]):hover {
   background: unset;
   box-shadow: inset 0px 0px 7px 7px #FFFFFF80;
   backdrop-filter: brightness(90%);
 }
 
-body.lichessTools.lichessTools-theme_pieceDrag .cg-wrap .is3d square.move-dest:not([style*="hidden"]) {
+body.lichessTools.lichessTools-theme_pieceDrag .cg-wrap .is3d square.move-dest:not([style*="hidden"],[style*="display: none"]) {
   z-index: 300;
 }
 
